--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -65,83 +65,83 @@
       <%= f.label :date %>
       <%= f.text_field :date, class: 'form-control' %><br>
       
-      <!--<%= f.label :Subject %>-->
-      <!--<select class="form-control">-->
-      <!--  <option>English 9</option>-->
-      <!--  <option>English 9 Advanced</option>-->
-      <!--  <option>English 10</option>-->
-      <!--  <option>English 10 Honors</option>-->
-      <!--  <option>American Literature</option>-->
-      <!--  <option>AP English Language</option>-->
-      <!--  <option>English Literature</option>-->
-      <!--  <option>AP English Literature</option>-->
-      <!--  <option>ELD Level 1-2</option>-->
-      <!--  <option>ELD Level 3</option>-->
-      <!--  <option>ELD Level 4</option>-->
-      <!--  <option>ELD Level 5</option>-->
-      <!--  <option>Lit for Success</option>-->
-      <!--  <option>Human Geography</option>-->
-      <!--  <option>World History</option>-->
-      <!--  <option>AP European History</option>-->
-      <!--  <option>US History</option>-->
-      <!--  <option>AP US History</option>-->
-      <!--  <option>American Government</option>-->
-      <!--  <option>Economics</option>-->
-      <!--  <option>AP Economics</option>-->
-      <!--  <option>AP Government/Politics</option>-->
-      <!--  <option>AP Psychology</option>-->
-      <!--  <option>Sociology</option>-->
-      <!--  <option>Psychology</option>-->
-      <!--  <option>AP Human Geography</option>-->
-      <!--  <option>Integrated Math I</option>-->
-      <!--  <option>Integrated Math II</option>-->
-      <!--  <option>Integrated Math II Accelerated</option>-->
-      <!--  <option>Integrated Math III</option>-->
-      <!--  <option>Integrated Math III Accelerated</option>-->
-      <!--  <option>Trigonometry/Statistics</option>-->
-      <!--  <option>Math Analysis</option></option>-->
-      <!--  <option>Math Analysis Honors</option>-->
-      <!--  <option>AP Calculus AB</option>-->
-      <!--  <option>AP Calculus BC</option>-->
-      <!--  <option>AP Statistics</option>-->
-      <!--  <option>Linear Algebra Honors</option>-->
-      <!--  <option>Intervention Math</option>-->
-      <!--  <option>Int Math II Concepts</option>-->
-      <!--  <option>Math Thinking</option>-->
-      <!--  <option>Biology</option>-->
-      <!--  <option>Medical Biology</option>-->
-      <!--  <option>Earth Space Science</option>-->
-      <!--  <option>Chemistry</option>-->
-      <!--  <option>Physics</option>-->
-      <!--  <option>Kinesiology</option>-->
-      <!--  <option>Physiology</option>-->
-      <!--  <option>Physiology Honors</option>-->
-      <!--  <option>AP Biology</option>-->
-      <!--  <option>AP Chemistry</option>-->
-      <!--  <option>AP Physics 1</option>-->
-      <!--  <option>AP Physics 2</option>-->
-      <!--  <option>AP Physics C</option>-->
-      <!--  <option>AP Environmental Science</option>-->
-      <!--  <option>Sports Medicine</option>-->
-      <!--  <option>Health</option>-->
-      <!--  <option>French 1-2</option>-->
-      <!--  <option>French 3-4</option>-->
-      <!--  <option>French 5-6</option>-->
-      <!--  <option>AP French Language</option>-->
-      <!--  <option>German 1-2</option>-->
-      <!--  <option>German 3-4</option>-->
-      <!--  <option>German 5-6</option>-->
-      <!--  <option>German 5-6 Honors</option>-->
-      <!--  <option>AP German Language</option>-->
-      <!--  <option>Korean 1-2</option>-->
-      <!--  <option>Korean 3-4</option>-->
-      <!--  <option>Korean 5-6</option>-->
-      <!--  <option>Spanish 1-2</option>-->
-      <!--  <option>Spanish 3-4</option>-->
-      <!--  <option>Spanish 5-6</option>-->
-      <!--  <option>AP Spanish Language (7-8)</option>-->
-      <!--  <option>AP Spanish Literature (9-10)</option>-->
-      <!--</select><br>-->
+      <%= f.label :Subject %>
+      <select class="form-control">
+        <option>English 9</option>
+        <option>English 9 Advanced</option>
+        <option>English 10</option>
+        <option>English 10 Honors</option>
+        <option>American Literature</option>
+        <option>AP English Language</option>
+        <option>English Literature</option>
+        <option>AP English Literature</option>
+        <option>ELD Level 1-2</option>
+        <option>ELD Level 3</option>
+        <option>ELD Level 4</option>
+        <option>ELD Level 5</option>
+        <option>Lit for Success</option>
+        <option>Human Geography</option>
+        <option>World History</option>
+        <option>AP European History</option>
+        <option>US History</option>
+        <option>AP US History</option>
+        <option>American Government</option>
+        <option>Economics</option>
+        <option>AP Economics</option>
+        <option>AP Government/Politics</option>
+        <option>AP Psychology</option>
+        <option>Sociology</option>
+        <option>Psychology</option>
+        <option>AP Human Geography</option>
+        <option>Integrated Math I</option>
+        <option>Integrated Math II</option>
+        <option>Integrated Math II Accelerated</option>
+        <option>Integrated Math III</option>
+        <option>Integrated Math III Accelerated</option>
+        <option>Trigonometry/Statistics</option>
+        <option>Math Analysis</option></option>
+        <option>Math Analysis Honors</option>
+        <option>AP Calculus AB</option>
+        <option>AP Calculus BC</option>
+        <option>AP Statistics</option>
+        <option>Linear Algebra Honors</option>
+        <option>Intervention Math</option>
+        <option>Int Math II Concepts</option>
+        <option>Math Thinking</option>
+        <option>Biology</option>
+        <option>Medical Biology</option>
+        <option>Earth Space Science</option>
+        <option>Chemistry</option>
+        <option>Physics</option>
+        <option>Kinesiology</option>
+        <option>Physiology</option>
+        <option>Physiology Honors</option>
+        <option>AP Biology</option>
+        <option>AP Chemistry</option>
+        <option>AP Physics 1</option>
+        <option>AP Physics 2</option>
+        <option>AP Physics C</option>
+        <option>AP Environmental Science</option>
+        <option>Sports Medicine</option>
+        <option>Health</option>
+        <option>French 1-2</option>
+        <option>French 3-4</option>
+        <option>French 5-6</option>
+        <option>AP French Language</option>
+        <option>German 1-2</option>
+        <option>German 3-4</option>
+        <option>German 5-6</option>
+        <option>German 5-6 Honors</option>
+        <option>AP German Language</option>
+        <option>Korean 1-2</option>
+        <option>Korean 3-4</option>
+        <option>Korean 5-6</option>
+        <option>Spanish 1-2</option>
+        <option>Spanish 3-4</option>
+        <option>Spanish 5-6</option>
+        <option>AP Spanish Language (7-8)</option>
+        <option>AP Spanish Literature (9-10)</option>
+      </select><br>
       
       <%= f.label :rate %>
       <%= f.text_field :rate, class: 'form-control' %><br>
