--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -10,54 +10,41 @@
   </div>
   
   <%= form_for(@subject, url: subjectcreate_path) do |f| %>
-    <%= render 'shared/error_messages_subject' %>
-    
-    
-
+      <%= render 'shared/error_messages_subject' %>
       <div id="container-subjects">
-            <%= f.label :subject %>
-            </select><br>
-              <div id = "splitthecols">
-                <% subjects = ['American Government','English 11','Biology','Chemistry', 'Applied Programming (buffet)', 'ELD','Earth Space Science','Economics','English 10 Honors','English 10','English 9 Advanced','English 9','English 12','French 1-2','French 3-4','French 5-6','German 1-2','German 3-4','German 5-6 Honors','German 5-6','Health','Human Geography', 'Integrated Math I','Integrated Math II Accelerated','Integrated Math II','Integrated Math III Accelerated','Integrated Math III','Intervention Math','Kinesiology','Korean 1-2','Korean 3-4','Korean 5-6','Linear Algebra Honors','Lit for Success','Math Analysis Honors','Math Analysis','Math Thinking','Medical Biology','Physics','Physiology Honors','Physiology','Psychology','Sociology','Spanish 1-2','Spanish 3-4','Spanish 5-6','Sports Medicine','Trigonometry/Statistics','US History','World History','AP Biology','AP Calculus AB','AP Calculus BC','AP Chemistry','AP Computer Science', 'AP Economics','AP English Language','AP English Literature','AP Environmental Science','AP European History','AP French Language','AP German Language','AP Government/Politics','AP Human Geography','AP Physics 1','AP Physics 2','AP Physics C','AP Psychology','AP Spanish Language (7-8)','AP Spanish Literature (9-10)','AP Statistics','AP US History'] %>
-                  <span id="checkbox-desktop-subjects">
-                    <% subjects.each do |i| %>
-                      <%= f.check_box :Multiplesubjects, { multiple: true, :style => "width: 25px; height: 25px;" }, i, nil %>
-                          <%= f.label(:subjects, i) %><br>
-                     <% end %>
-                 </span>
-                  <span id="dropdown-responsive-subjects">
-                     <%= f.select :name, options_for_select(['American Government','English 11','Biology','Chemistry', 'Applied Computer Programming (buffet)', 'ELD','Earth Space Science','Economics','English 10 Honors','English 10','English 9 Advanced','English 9','English 12','French 1-2','French 3-4','French 5-6','German 1-2','German 3-4','German 5-6 Honors','German 5-6','Health','Human Geography', 'Integrated Math I','Integrated Math II Accelerated','Integrated Math II','Integrated Math III Accelerated','Integrated Math III','Intervention Math','Kinesiology','Korean 1-2','Korean 3-4','Korean 5-6','Linear Algebra Honors','Lit for Success','Math Analysis Honors','Math Analysis','Math Thinking','Medical Biology','Physics','Physiology Honors','Physiology','Psychology','Sociology','Spanish 1-2','Spanish 3-4','Spanish 5-6','Sports Medicine','Trigonometry/Statistics','US History','World History','AP Biology','AP Calculus AB','AP Calculus BC','AP Chemistry','AP Computer Science', 'AP Economics','AP English Language','AP English Literature','AP Environmental Science','AP European History','AP French Language','AP German Language','AP Government/Politics','AP Human Geography','AP Physics 1','AP Physics 2','AP Physics C','AP Psychology','AP Spanish Language (7-8)','AP Spanish Literature (9-10)','AP Statistics','AP US History'], (@subject.name)), { include_blank: 'None'}, class: "form-control" %>
-                  </span>
-              </div>
+          <%= f.label :subject %><br>
+            <div id = "splitthecols">
+              <% subjects = ['American Government','English 11','Biology','Chemistry', 'Applied Programming (buffet)', 'ELD','Earth Space Science','Economics','English 10 Honors','English 10','English 9 Advanced','English 9','English 12','French 1-2','French 3-4','French 5-6','German 1-2','German 3-4','German 5-6 Honors','German 5-6','Health','Human Geography', 'Integrated Math I','Integrated Math II Accelerated','Integrated Math II','Integrated Math III Accelerated','Integrated Math III','Intervention Math','Kinesiology','Korean 1-2','Korean 3-4','Korean 5-6','Linear Algebra Honors','Lit for Success','Math Analysis Honors','Math Analysis','Math Thinking','Medical Biology','Physics','Physiology Honors','Physiology','Psychology','Sociology','Spanish 1-2','Spanish 3-4','Spanish 5-6','Sports Medicine','Trigonometry/Statistics','US History','World History','AP Biology','AP Calculus AB','AP Calculus BC','AP Chemistry','AP Computer Science', 'AP Economics','AP English Language','AP English Literature','AP Environmental Science','AP European History','AP French Language','AP German Language','AP Government/Politics','AP Human Geography','AP Physics 1','AP Physics 2','AP Physics C','AP Psychology','AP Spanish Language (7-8)','AP Spanish Literature (9-10)','AP Statistics','AP US History'] %>
+                <span id="checkbox-desktop-subjects">
+                  <% subjects.each do |i| %>
+                    <%= f.check_box :Multiplesubjects, { multiple: true, :style => "width: 25px; height: 25px;" }, i, nil %>
+                        <%= f.label(:subjects, i) %><br>
+                    <% end %>
+                </span>
+                <span id="dropdown-responsive-subjects">
+                  <%= f.select :name, options_for_select(['American Government','English 11','Biology','Chemistry', 'Applied Computer Programming (buffet)', 'ELD','Earth Space Science','Economics','English 10 Honors','English 10','English 9 Advanced','English 9','English 12','French 1-2','French 3-4','French 5-6','German 1-2','German 3-4','German 5-6 Honors','German 5-6','Health','Human Geography', 'Integrated Math I','Integrated Math II Accelerated','Integrated Math II','Integrated Math III Accelerated','Integrated Math III','Intervention Math','Kinesiology','Korean 1-2','Korean 3-4','Korean 5-6','Linear Algebra Honors','Lit for Success','Math Analysis Honors','Math Analysis','Math Thinking','Medical Biology','Physics','Physiology Honors','Physiology','Psychology','Sociology','Spanish 1-2','Spanish 3-4','Spanish 5-6','Sports Medicine','Trigonometry/Statistics','US History','World History','AP Biology','AP Calculus AB','AP Calculus BC','AP Chemistry','AP Computer Science', 'AP Economics','AP English Language','AP English Literature','AP Environmental Science','AP European History','AP French Language','AP German Language','AP Government/Politics','AP Human Geography','AP Physics 1','AP Physics 2','AP Physics C','AP Psychology','AP Spanish Language (7-8)','AP Spanish Literature (9-10)','AP Statistics','AP US History'], (@subject.name)), { include_blank: 'None'}, class: "form-control" %>
+                </span><br>
+            </div>
               
-            <%= f.label "Optimal day" %>
-            <%= f.select :date, options_for_select(['All', 'Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday'], (@subject.date)), class: "form-control" %>
-            <br>
-            
-            <% if !Person.find_by(id: session[:tutor_id]).academy %>
-                <%= f.label :rate %>
-                <%= f.text_field :rate, class: 'form-control', value: "$" %><br>
-            <% else %>
-              <%= f.label "Time Slot (applies to all selected days, you'll have to create a new entry for each day that has a different time slot)" %>
-              <br>
-                  <%= f.check_box :timeslots, { multiple: true, :style => "width: 25px; height: 25px;" }, "3:00pm-4:30pm", nil %>
-                  <%= f.label(:timeslots, "3:00pm-4:30pm (recommended)") %><br>
-                  <%= f.check_box :timeslots, { multiple: true, :style => "width: 25px; height: 25px;" }, "4:30pm-6:00pm", nil %>
-                  <%= f.label(:timeslots, "4:30pm-6:00pm") %><br>
-                  <%= f.check_box :timeslots, { multiple: true, :style => "width: 25px; height: 25px;" }, "6:00pm-7:30pm", nil %>
-                  <%= f.label(:timeslots, "6:00pm-7:30pm") %><br>
-                  <%= f.check_box :timeslots, { multiple: true, :style => "width: 25px; height: 25px;" }, "7:30pm-9:00pm", nil %>
-                  <%= f.label(:timeslots, "7:30pm-9:00pm") %><br>
-                  <br>
-                <!-- automate rate to be $-1 (and on find page, if $ = -1 show academy/free -->
-                <% f.label :rate %>
-                <% f.text_field :rate, class: 'form-control', value: "$-1" %>
-            <% end %>
-        
-            <div id="center_save_changes"> <%= f.submit "Save", class: "btn btn-primary" %> </div>
-            <br>
+          <%= f.label "Tutoring days" %>
+          <%= f.select :date, options_for_select(['All', 'Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday'], (@subject.date)), class: "form-control" %><br><br>
+          
+          <% if !Person.find_by(id: session[:tutor_id]).academy %>
+            <%= f.label :rate %>
+            <%= f.text_field :rate, class: 'form-control', value: "$" %><br>
+          <% else %>
+            <%= f.label "Time Slot (applies to all selected days, you'll have to create a new entry for each day that has a different time slot)" %><br>
+              <%= f.check_box :timeslots, { multiple: true, :style => "width: 25px; height: 25px;" }, "3:00pm-4:30pm", nil %>
+              <%= f.label(:timeslots, "3:00pm-4:30pm (recommended)") %><br>
+              <%= f.check_box :timeslots, { multiple: true, :style => "width: 25px; height: 25px;" }, "4:30pm-6:00pm", nil %>
+              <%= f.label(:timeslots, "4:30pm-6:00pm") %><br>
+              <%= f.check_box :timeslots, { multiple: true, :style => "width: 25px; height: 25px;" }, "6:00pm-7:30pm", nil %>
+              <%= f.label(:timeslots, "6:00pm-7:30pm") %><br>
+              <%= f.check_box :timeslots, { multiple: true, :style => "width: 25px; height: 25px;" }, "7:30pm-9:00pm", nil %>
+              <%= f.label(:timeslots, "7:30pm-9:00pm") %><br><br>
           <% end %>
-  
-      
-      </div>
+
+          <div id="center_save_changes"> <%= f.submit "Save", class: "btn btn-primary" %> </div><br>
+        </div>
+    <% end %>
 </body>
